# mqi_interf_2508

./: OPERATIONS.md  USAGE_GUIDE_KR.md  code_structure.md  module_structure.md  mypy_output_final.txt  mypy_output_final_2.txt  mypy_output_new.txt  pyproject.toml  refactoring_plan.md  requirements.txt  ruff_output.txt  ruff_output_new.txt  run.bat  run_file_transfer.py  run_remote_executor.py
config/: config.default.yaml  config.development.yaml  config.production.yaml  id_rsa
data/: mqi_system_dev-DESKTOP-SMC-I7.db  mqi_system_dev.db
docs/: 01_ARCHITECTURE.md  02_SETUP_AND_RUN.md  03_DATABASE_SCHEMA.md  04_COMMUNICATION_PROTOCOL.md  05_DEVELOPMENT_STANDARDS.md  README.md
docs/components/: CONDUCTOR.md  DASHBOARD.md  WORKER_ARCHIVER.md  WORKER_CASE_SCANNER.md  WORKER_FILE_TRANSFER.md  WORKER_REMOTE_EXECUTOR.md  WORKER_SYSTEM_CURATOR.md
scripts/: initialize_gpu.py  setup_database.py  setup_environment.sh  setup_message_queues.py
src/: __init__.py  health_monitor.py  main_orchestrator.py  process_manager.py
src/common/: __init__.py  config_loader.py  db_utils.py  exceptions.py  logger.py  logging_setup.py  messaging.py  remote_executor.py  ssh_base.py  ssh_client_manager.py
src/conductor/: main.py  state_service.py  workflow_manager.py
src/dashboard/: dashboard_service.py  data_collector.py  main.py
src/dashboard/static/: dashboard.css  dashboard.js
src/dashboard/templates/: index.html
src/mqi_interface.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/workers/: __init__.py
tests/unit/: test_main_orchestrator.py
(+21 files in other folders)
